style: fixed dark mode in pages

--- a/lombardidev-astro/src/components/about/ExperienceContainer.astro
+++ b/lombardidev-astro/src/components/about/ExperienceContainer.astro
@@ -6,10 +6,10 @@ interface Props {
 const { class: className } = Astro.props as Props;
 ---
 <div class={className}>
-    <div class="w-0.5 h-0.5 bg-teal-700 rounded-full"></div>
-    <div class="w-0.5 h-0.5 bg-teal-700 rounded-full my-0.5"></div>
-    <div class="w-0.5 h-0.5 bg-teal-700 rounded-full mb-1"></div>
-  <ol class="relative border-s-2 border-teal-700/40 dark:border-gray-700">
+    <div class="w-0.5 h-0.5 bg-teal-700 dark:bg-teal-500 rounded-full"></div>
+    <div class="w-0.5 h-0.5 bg-teal-700 dark:bg-teal-500 rounded-full my-0.5"></div>
+    <div class="w-0.5 h-0.5 bg-teal-700 dark:bg-teal-500 rounded-full mb-1"></div>
+  <ol class="relative border-s-2 border-teal-700/40 dark:border-teal-500">
     <slot />
   </ol>
 </div>
