--- a/lombardidev-astro/src/components/about/ExperienceItem.astro
+++ b/lombardidev-astro/src/components/about/ExperienceItem.astro
@@ -10,8 +10,8 @@ const { date, title, business , description } = Astro.props as Props;
 ---
 
 <li class="mb-10 ms-4">
-  <div class="absolute w-3 h-3 bg-teal-700 rounded-full mt-1.5 -start-[7px] border border-slate-50 dark:border-gray-900 dark:bg-gray-700"></div>
-  <date class="mb-1 text-sm font-normal leading-none text-gray-500 dark:text-gray-400">{date}</date>
+  <div class="absolute w-3 h-3 bg-teal-700 rounded-full mt-1.5 -start-[7px] border border-slate-50 dark:border-gray-900 dark:bg-teal-500"></div>
+  <date class="mb-1 text-sm font-normal leading-none text-gray-500 dark:text-teal-400">{date}</date>
   <h3 class="text-lg font-semibold text-slate-900 dark:text-white">{title}</h3>
   <span class="inline-block mb-1 text-sm font-light text-teal-700 dark:text-white">{business}</span>
   <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">{description}</p>
