--- a/lombardidev-astro/src/components/about/ProfileHistory.astro
+++ b/lombardidev-astro/src/components/about/ProfileHistory.astro
@@ -41,17 +41,17 @@ const timeline = [
       </h2>
     </div>
     <div class="relative">
-      <ul id="cards">
+      <ul id="cards" class="pb-6">
         {
           timeline.map((item, index) => (
             <li
               id={`card_${index}`}
-              class="card list-none mb-4 ml-2 border border-solid border-slate-900/10 rounded-2xl p-4 shadow-md shadow-slate-900/10 bg-slate-50"
+              class="card list-none mb-4 ml-2 border border-solid border-slate-900/10 dark:border-teal-500 rounded-2xl p-4 shadow-md shadow-slate-900/10 bg-slate-50 dark:bg-slate-950"
             >
               <div class="flex flex-col">
                 <div class="flex items-center mb-2">
                   <div class="text-2xl">{item.icon}</div>
-                  <h3 class="text-xl font-semibold text-gray-900 dark:text-gray-100 ml-3">
+                  <h3 class="text-xl font-semibold text-gray-900 dark:text-teal-500 ml-3">
                     {item.title}
                   </h3>
                 </div>
