--- a/lombardidev-astro/src/components/layout/Head.astro
+++ b/lombardidev-astro/src/components/layout/Head.astro
@@ -56,6 +56,6 @@ const {
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.2/src/regular/style.css" />
 
   {/** Transitions */}
-  <ClientRouter />
+  <ClientRouter transition:persist />
 
 </head>
