--- a/lombardidev-astro/src/components/ui/ThemeToggle.astro
+++ b/lombardidev-astro/src/components/ui/ThemeToggle.astro
@@ -34,32 +34,54 @@
   :global(.dark) .moon:hover, :global(.dark) .moon:focus { fill: var(--color-teal-700); }
 </style>
 
-<script is:inline>
-  const theme = (() => {
-    if (typeof localStorage !== 'undefined' && localStorage.getItem('theme')) {
-      return localStorage.getItem('theme');
-    }
-    if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
-      return 'dark';
-    }
-      return 'light';
-  })();
+<script>
+  const setScheme = () => {
+    const schemeButton = document.querySelector('#themeToggle')
+    const colorSchemeDark = window.matchMedia('(prefers-color-scheme: dark)')
+    let darkModeState = false
 
-  if (theme === 'light') {
-    document.documentElement.classList.remove('dark');
-  } else {
-    document.documentElement.classList.add('dark');
+    /** Setear el modo oscuro en el elemento HTML */
+    function toggleDarkMode(state: boolean) {
+      document.documentElement.classList.toggle('dark', state)
+      darkModeState = state
+    }
+
+    /** Setear el modo oscuro en el localStorage */
+    function setDarkModeLocalStorage(state: boolean) {
+      localStorage.setItem('theme', String(state))
+    }
+
+    /**  */
+    colorSchemeDark.addEventListener('change', e => {
+      darkModeState = e.matches
+      console.log('darkModeState', darkModeState)
+      toggleDarkMode(darkModeState)
+      setDarkModeLocalStorage(darkModeState)
+    })
+
+    /** Evento del componente */
+    schemeButton?.addEventListener('click', () => {
+      darkModeState = !darkModeState
+
+      toggleDarkMode(darkModeState)
+      setDarkModeLocalStorage(darkModeState)
+    })
+
+    /** Obtiene el modo oscuro del localStorage */
+    function getPreference() {
+      if (localStorage.getItem('theme')) {
+        return localStorage.getItem('theme') === 'true'
+      } else {
+        return colorSchemeDark.matches
+      }
+    }
+
+    toggleDarkMode(getPreference())
   }
 
-  window.localStorage.setItem('theme', theme);
+  /** Disparar el evento */
+  setScheme()
 
-  const handleToggleClick = () => {
-    const element = document.documentElement;
-    element.classList.toggle("dark");
-
-    const isDark = element.classList.contains("dark");
-    localStorage.setItem("theme", isDark ? "dark" : "light");
-  }
-
-  document.getElementById("themeToggle").addEventListener("click", handleToggleClick);
+  /** Escuchar el evento */
+	document.addEventListener('astro:after-swap', setScheme)
 </script>
