--- a/lombardidev-astro/src/components/about/ExperienceItem.astro
+++ b/lombardidev-astro/src/components/about/ExperienceItem.astro
@@ -14,5 +14,5 @@ const { date, title, business , description } = Astro.props as Props;
   <date class="mb-1 text-sm font-normal leading-none text-gray-500 dark:text-teal-400">{date}</date>
   <h3 class="text-lg font-semibold text-slate-900 dark:text-white">{title}</h3>
   <span class="inline-block mb-1 text-sm font-light text-teal-700 dark:text-white">{business}</span>
-  <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">{description}</p>
+  <p class="mb-4 text-base font-normal md:w-4xl text-gray-500 dark:text-gray-400">{description}</p>
 </li>
