--- a/lombardidev-astro/src/components/ui/CardFeacture.astro
+++ b/lombardidev-astro/src/components/ui/CardFeacture.astro
@@ -10,13 +10,13 @@ interface Props {
 
 const { features } = Astro.props as Props;
 ---
-<div class="flex items-center gap-2">
+<div class="flex items-center gap-2 md:gap-4">
   <div class="bg-teal-700 p-2 rounded-full w-12 h-12 flex items-center justify-center text-slate-50">
     <i class={`ph-duotone ${features.icon}`} style="font-size: 24px;"></i>
   </div>
   <h3 class="font-bold text-2xl">{features.title}</h3>
 </div>
-<div class="flex flex-col gap-2">
+<div class="flex flex-col gap-2 md:gap-8 md:pt-2">
   <span class="font-semibold">{features.description}</span>
   <ol class="list-outside list-disc pl-4 space-y-1">
     {
