--- a/lombardidev-astro/src/pages/index.astro
+++ b/lombardidev-astro/src/pages/index.astro
@@ -33,6 +33,7 @@ const { title , description } = Astro.props
 			subtitle="Hola a todos 👋!"
 			description="Product Owner & Fullstack Developer"
 			align="start"
+			action
 			class="px-4 flex flex-col space-y-4 pb-10 md:flex-row md:items-center md:justify-evenly md:pb-0 md:h-screen"
 		>
 			<div class="flex flex-col gap-4 pt-6 mb-6 items-center">
